--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -59,3 +59,7 @@
 /* Skip to Main Content - Accessibility Link
 ------------------------------------------------------------ */
 @import "supporting/skip-to-main-content";
+
+/* Import 'grandchild' customizations
+----------------------------------------------------------- */
+@import "../../custom/css/custom";
